--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a Personal Portfolio Website using HTML and CSS | Codehal</title>
+    <title>Nishan Rai Personal Portfolio Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,8 +22,8 @@
     </header>
     <section class="home">
         <div class="content">
-            <h2>Hi, I'm <span>Joe Greyson</span></h2>
-            <h4>Frontend Developer</h4>
+            <h2>Hi, I'm <span>Nishan</span></h2>
+            <h4>Worship Leader</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A esse totam provident voluptas similique.
                 Impedit incidunt atque recusandae rem quam.</p>
             <div class="btn-group">
