--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h2 class="logo"><span>J</span>oe.</h2>
+        <h2 class="logo"><span>N</span>ishan.</h2>
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="#">About</a>
