--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="main-container">
     <header>
         <h2 class="logo"><span>N</span>ishan.</h2>
         <nav class="navigation">
@@ -37,5 +38,6 @@
             </div>
         </div>
     </section>
+    </div>
 </body>
 </html>
