--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <div class="content">
             <h2>Hi, I'm <span>Nishan</span></h2>
             <h4>Worship Leader</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A esse totam provident voluptas similique.
-                Impedit incidunt atque recusandae rem quam.</p>
+            <p>Hello, I'm Nishan, a devoted worship leader with a profound love for music and a heart dedicated to worshiping God. I have found immense joy and purpose in guiding others through the spiritual journey of worship.</p>
             <div class="btn-group">
                 <a href="#">Hire Me</a>
                 <a href="#">See Projects</a>
