--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
         <div class="content">
             <h2>Hi, I'm <span>Nishan</span></h2>
             <h4>Worship Leader</h4>
-            <p>Hello, I'm Nishan, a devoted worship leader with a profound love for music and a heart dedicated to worshiping God. I have found immense joy and purpose in guiding others through the spiritual journey of worship.</p>
+            <p>A devoted worship leader with a profound love for music and a heart dedicated to worshiping God. I have found immense joy and purpose in guiding others through the spiritual journey of worship.</p>
             <div class="btn-group">
-                <a href="#">Hire Me</a>
+                <a href="#">Contact Me</a>
                 <a href="#">See Projects</a>
             </div>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </div>
         </div>
     </section>
