--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <a href="#">See Projects</a>
             </div>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=https://www.instagram.com/nishan.rcw/"><i class="fa-brands fa-instragram"></i></a>
+                <a href="https://www.facebook.com/Nishan.rcw/"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.youtube.com/@NishanRCW"><i class="fa-brands fa-youtube"></i></a>
             </div>
         </div>
     </section>
