--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#">See Projects</a>
             </div>
             <div class="social-icons">
-                <a href=https://www.instagram.com/nishan.rcw/"><i class="fa-brands fa-instragram"></i></a>
+                <a href=https://www.instagram.com/nishan.rcw/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.facebook.com/Nishan.rcw/"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://www.youtube.com/@NishanRCW"><i class="fa-brands fa-youtube"></i></a>
