--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#">Blog</a>
             <a href="#">Contact</a>
         </nav>
-        <a href="#" class="btn-talk">Let's Talk</a>
+        <a href="#" class="btn-talk"></a>
     </header>
     <section class="home">
         <div class="content">
@@ -29,8 +29,8 @@
             <h4>Worship Leader</h4>
             <p>A devoted worship leader with a profound love for music and a heart dedicated to worshiping God. I have found immense joy and purpose in guiding others through the spiritual journey of worship.</p>
             <div class="btn-group">
-                <a href="#">Contact Me</a>
-                <a href="#">See Projects</a>
+                <a href="#"></a>
+                <a href="#"></a>
             </div>
             <div class="social-icons">
                 <a href=https://www.instagram.com/nishan.rcw/"><i class="fa-brands fa-instagram"></i></a>
