--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://drive.google.com/file/d/1BAsbzXuMv1p58jpi1UYolE-5FwvMhMx7/view?usp=drive_link"
+    <link rel="icon" href="https://drive.google.com/file/d/1BAsbzXuMv1p58jpi1UYolE-5FwvMhMx7/view"
           type="image/x-icon">
     <title>Nishan Rai Personal Portfolio Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
